--- a/web/src/sass/_components.scss
+++ b/web/src/sass/_components.scss
@@ -153,7 +153,7 @@ button.tarmo-ctrl-exit {
   align-items: flex-end;
 }
 
-/** Menus */
+// Menus
 
 .tarmo-button-menu-container {
   width: 80vw;
@@ -285,12 +285,19 @@ button.tarmo-ctrl-exit {
     float: left;
     color: $grey1;
 
-    h3 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
       color: $grey1;
+      max-width: 90vw;
     }
 
     p {
       font-family: $bodyfont;
+      max-width: 90vw;
     }
 
     button {
